--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -28,5 +28,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add index.md
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update index.md with new meetings"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update index.md with new meetups"
           git push
